--- a/convolutional-neural-networks/cifar-cnn/cifar10_cnn_exercise.ipynb
+++ b/convolutional-neural-networks/cifar-cnn/cifar10_cnn_exercise.ipynb
@@ -281,16 +281,20 @@
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        \n",
-    "        #Convolutional layer\n",
-    "        self.conv1 = nn.Conv2d(3, 10, 5)\n",
-    "        self.conv2 = nn.Conv2d(10, 20, 5)\n",
+    "        #CONVOLUTIONAL LAYER\n",
+    "        #Convolutional layer sees 32x32x3 image tensor\n",
+    "        self.conv1 = nn.Conv2d(3, 16, 3, padding=1)\n",
+    "        #Convolutional layer sees 16x16x16 image tensor\n",
+    "        self.conv2 = nn.Conv2d(16, 32, 3, padding=1)\n",
+    "        #Convolutional layer sees 8x8x32 image tensor\n",
+    "        self.conv3 = nn.Conv2d(32, 64, 3, padding=1)\n",
     "        \n",
-    "        #Max pooling layer\n",
+    "        #MAX POOLING LAYER\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
     "        \n",
-    "        #Linear Layers\n",
-    "        self.fc1 = nn.Linear(20 * 5 * 5, 128)\n",
-    "        self.fc2 = nn.Linear(128, 64)\n",
+    "        #LINERA LAYERS    depth * x_img_size * y_img_size\n",
+    "        self.fc1 = nn.Linear(64 * 4 * 4, 500)\n",
+    "        self.fc2 = nn.Linear(500, 64)\n",
     "        self.fc3 = nn.Linear(64, 10)\n",
     "        \n",
     "        #Dropout\n",
@@ -301,7 +305,9 @@
     "        \n",
     "        x = self.pool(F.relu(self.conv1(x)))\n",
     "        x = self.pool(F.relu(self.conv2(x)))\n",
-    "        x = x.view(-1, 20 * 5 * 5)\n",
+    "        x = self.pool(F.relu(self.conv3(x)))\n",
+    "        #flatten im\n",
+    "        x = x.view(-1, 64 * 4 * 4)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.dropout(x)\n",
     "        x = F.relu(self.fc2(x))\n",
@@ -380,7 +386,7 @@
    ],
    "source": [
     "# number of epochs to train the model\n",
-    "n_epochs = 8 # you may increase this number to train a final model\n",
+    "n_epochs = 20 # you may increase this number to train a final model\n",
     "\n",
     "valid_loss_min = np.Inf # track change in validation loss\n",
     "\n",
