Dog project update

--- a/project-dog-classification/dog_app.ipynb
+++ b/project-dog-classification/dog_app.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -601,19 +601,17 @@
     "        super(Net, self).__init__()\n",
     "        ## Define layers of a CNN\n",
     "        # input layer -> 224x224x3\n",
-    "        self.conv1 = nn.Conv2d(3, 16, 3, padding=1)\n",
-    "        # input layer -> 112x112x16\n",
-    "        self.conv2 = nn.Conv2d(16, 32, 3, padding=1)\n",
+    "        self.conv1 = nn.Conv2d(3, 32, 3, stride=2,  padding=1)\n",
     "        # input layer -> 56x56x32\n",
-    "        self.conv3 = nn.Conv2d(32, 64, 3, padding=1)\n",
-    "        # input layer -> 28x28x64\n",
-    "        self.conv4 = nn.Conv2d(64, 128, 3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, 3, stride=2, padding=1)\n",
+    "        # input layer -> 14x14x64\n",
+    "        self.conv3 = nn.Conv2d(64, 128, 3, padding=1)\n",
     "        \n",
     "        # Max pooling layer\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
     "        \n",
     "        # Liner layers\n",
-    "        self.fc1 = nn.Linear(14 * 14 * 128, 1000)\n",
+    "        self.fc1 = nn.Linear(7 * 7 * 128, 1000)\n",
     "        self.fc2 = nn.Linear(1000, 500)\n",
     "        self.fc3 = nn.Linear(500, 133)\n",
     "        \n",
@@ -625,9 +623,8 @@
     "        x = self.pool(F.relu(self.conv1(x)))\n",
     "        x = self.pool(F.relu(self.conv2(x)))\n",
     "        x = self.pool(F.relu(self.conv3(x)))\n",
-    "        x = self.pool(F.relu(self.conv4(x)))\n",
     "        \n",
-    "        x = x.view(-1, 14 * 14 * 128)\n",
+    "        x = x.view(-1, 7 * 7 * 128)\n",
     "        x = self.dropout(x)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.dropout(x)\n",
@@ -851,7 +848,34 @@
    },
    "outputs": [],
    "source": [
-    "## TODO: Specify data loaders\n"
+    "## TODO: Specify data loaders\n",
+    "\n",
+    "train_path_transfer = \"/data/dog_images/train\"\n",
+    "valid_path_transfer = \"/data/dog_images/valid\"\n",
+    "test_path_transfer = \"/data/dog_images/test\"\n",
+    "\n",
+    "data_transform = transforms.Compose([transforms.CenterCrop(224),\n",
+    "                                     transforms.RandomHorizontalFlip(),transforms.RandomRotation(40),\n",
+    "                                     transforms.ToTensor(),transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])])\n",
+    "\n",
+    "\n",
+    "data_transform_test = transforms.Compose([transforms.Resize(225),transforms.CenterCrop(224),\n",
+    "                                      transforms.ToTensor(),transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])])\n",
+    "\n",
+    "train_data_t = datasets.ImageFolder(train_path_transfer, transform=data_transform)\n",
+    "valid_data_t = datasets.ImageFolder(valid_path_transfer, transform=data_transform_test)\n",
+    "test_data_t = datasets.ImageFolder(test_path_transfer, transform=data_transform_test)\n",
+    "\n",
+    "\n",
+    "train_loader_t = torch.utils.data.DataLoader(train_data_t, batch_size=batch_size, shuffle=True)\n",
+    "valid_loader_t = torch.utils.data.DataLoader(valid_data_t, batch_size=batch_size, shuffle=True)\n",
+    "test_loader_t = torch.utils.data.DataLoader(test_data_t, batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "loaders_transfer = {\n",
+    "    'train' : train_loader_t,\n",
+    "    'test' : test_loader_t,\n",
+    "    'valid' : valid_loader_t\n",
+    "}"
    ]
   },
   {
@@ -875,10 +899,32 @@
     "import torch.nn as nn\n",
     "\n",
     "## TODO: Specify model architecture \n",
+    "model_transfer = models.vgg16(pretrained=True)\n",
     "\n",
+    "for param in model_transfer.parameters():\n",
+    "    param.requires_grad = False\n",
+    "    \n",
     "\n",
+    "use_cuda = torch.cuda.is_available()\n",
     "if use_cuda:\n",
-    "    model_transfer = model_transfer.cuda()"
+    "    model_transfer = model_transfer.cuda()\n",
+    "    print('Cuda available.')\n",
+    "    \n",
+    "model_transfer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fc = nn.Linear(4096, 133)\n",
+    "model_transfer.classifier[6] = fc\n",
+    "\n",
+    "for param in model_transfer.classifier.parameters():\n",
+    "    param.requires_grad = True\n",
+    "model_transfer"
    ]
   },
   {
@@ -912,8 +958,8 @@
    },
    "outputs": [],
    "source": [
-    "criterion_transfer = None\n",
-    "optimizer_transfer = None"
+    "criterion_transfer = nn.CrossEntropyLoss()\n",
+    "optimizer_transfer = optim.SGD(model_transfer.classifier.parameters(), lr=0.001)"
    ]
   },
   {
@@ -934,10 +980,10 @@
    "outputs": [],
    "source": [
     "# train the model\n",
-    "model_transfer = # train(n_epochs, loaders_transfer, model_transfer, optimizer_transfer, criterion_transfer, use_cuda, 'model_transfer.pt')\n",
+    "model_transfer = train(30, loaders_transfer, model_transfer, optimizer_transfer, criterion_transfer, use_cuda, 'model_transfer.pt')\n",
     "\n",
     "# load the model that got the best validation accuracy (uncomment the line below)\n",
-    "#model_transfer.load_state_dict(torch.load('model_transfer.pt'))"
+    "model_transfer.load_state_dict(torch.load('model_transfer.pt'))"
    ]
   },
   {
@@ -981,11 +1027,18 @@
     "### and returns the dog breed that is predicted by the model.\n",
     "\n",
     "# list of class names by index, i.e. a name can be accessed like class_names[0]\n",
-    "class_names = [item[4:].replace(\"_\", \" \") for item in data_transfer['train'].classes]\n",
+    "class_names = [item[4:].replace(\"_\", \" \") for item in loaders_transfer['train'].dataset.classes]\n",
     "\n",
     "def predict_breed_transfer(img_path):\n",
     "    # load the image and return the predicted breed\n",
-    "    return None"
+    "    img = Image.open(img_path)\n",
+    "    transform = transforms.Compose([transforms.Resize(255), transforms.CenterCrop(224), transforms.ToTensor()])\n",
+    "    img = transform(img)\n",
+    "    img = torch.unsqueeze(img, 0)\n",
+    "    output = model_transfer(img)\n",
+    "    _, index = torch.max(output, 1)\n",
+    "    \n",
+    "    return class_names[index]"
    ]
   },
   {
@@ -1023,7 +1076,22 @@
     "### Feel free to use as many code cells as needed.\n",
     "\n",
     "def run_app(img_path):\n",
-    "    ## handle cases for a human face, dog, and neither\n",
+    "    if face_detector(img_path):\n",
+    "        #Human face detected\n",
+    "        human = predict_breed_transfer(img_path)\n",
+    "        img = Image.open(img_path)\n",
+    "        plt.imshow(img)\n",
+    "        plt.show()\n",
+    "        return print('Found human. You look like a {}'.format(human))\n",
+    "    elif dog_detector(img_path):\n",
+    "        #Dog detected\n",
+    "        dog_breed = predict_breed_transfer(img_path)\n",
+    "        img = Image.open(img_path)\n",
+    "        plt.imshow(img)\n",
+    "        plt.show()\n",
+    "        return print('Found dog. Your breed is a {}'.format(dog_breed))\n",
+    "    else:\n",
+    "        print('No human or dog detected.')\n",
     "    \n"
    ]
   },
