--- a/project-dog-classifier/dog_app.ipynb
+++ b/project-dog-classifier/dog_app.ipynb
@@ -628,18 +628,19 @@
     "        super(Net, self).__init__()\n",
     "        ## Define layers of a CNN\n",
     "        # input layer -> 224x224x3\n",
-    "        self.conv1 = nn.Conv2d(3, 8, 3, padding=1)\n",
-    "        # input layer -> 112x112x16\n",
-    "        self.conv2 = nn.Conv2d(8, 32, 3, padding=1)\n",
+    "        self.conv1 = nn.Conv2d(3, 32, 3, stride=2,  padding=1)\n",
     "        # input layer -> 56x56x32\n",
-    "        self.conv3 = nn.Conv2d(32, 64, 3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, 3, stride=2, padding=1)\n",
+    "        # input layer -> 14x14x64\n",
+    "        self.conv3 = nn.Conv2d(64, 128, 3, padding=1)\n",
     "        \n",
     "        # Max pooling layer\n",
     "        self.pool = nn.MaxPool2d(2, 2)\n",
     "        \n",
     "        # Liner layers\n",
-    "        self.fc1 = nn.Linear(28 * 28 * 64, 500)\n",
-    "        self.fc2 = nn.Linear(500, 133)\n",
+    "        self.fc1 = nn.Linear(7 * 7 * 128, 1000)\n",
+    "        self.fc2 = nn.Linear(1000, 500)\n",
+    "        self.fc3 = nn.Linear(500, 133)\n",
     "        \n",
     "        # Dropout layer\n",
     "        self.dropout = nn.Dropout(0.2)\n",
@@ -650,11 +651,13 @@
     "        x = self.pool(F.relu(self.conv2(x)))\n",
     "        x = self.pool(F.relu(self.conv3(x)))\n",
     "        \n",
-    "        x = x.view(-1, 28 * 28 * 64)\n",
+    "        x = x.view(-1, 7 * 7 * 128)\n",
     "        x = self.dropout(x)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.dropout(x)\n",
-    "        x = self.fc2(x)\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.fc3(x)\n",
     "        return x\n",
     "\n",
     "#-#-# You so NOT have to modify the code below this line. #-#-#\n",
@@ -875,14 +878,13 @@
    "outputs": [],
    "source": [
     "## TODO: Specify data loaders\n",
-    "## TODO: Specify data loaders\n",
     "\n",
     "train_path_transfer = \"/data/dog_images/train\"\n",
     "valid_path_transfer = \"/data/dog_images/valid\"\n",
     "test_path_transfer = \"/data/dog_images/test\"\n",
     "\n",
     "data_transform = transforms.Compose([transforms.CenterCrop(224),\n",
-    "                                     transforms.RandomHorizontalFlip(),transforms.RandomRotation(40),\n",
+    "                                     transforms.RandomHorizontalFlip(),transforms.RandomRotation(10),\n",
     "                                     transforms.ToTensor(),transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])])\n",
     "\n",
     "\n",
@@ -1055,11 +1057,18 @@
     "### and returns the dog breed that is predicted by the model.\n",
     "\n",
     "# list of class names by index, i.e. a name can be accessed like class_names[0]\n",
-    "class_names = [item[4:].replace(\"_\", \" \") for item in data_transfer['train'].classes]\n",
+    "class_names = [item[4:].replace(\"_\", \" \") for item in loaders_transfer['train'].dataset.classes]\n",
     "\n",
     "def predict_breed_transfer(img_path):\n",
     "    # load the image and return the predicted breed\n",
-    "    return None"
+    "    img = Image.open(img_path)\n",
+    "    transform = transforms.Compose([transforms.Resize(255), transforms.CenterCrop(224), transforms.ToTensor()])\n",
+    "    img = transform(img)\n",
+    "    img = torch.unsqueeze(img, 0)\n",
+    "    output = model_transfer(img)\n",
+    "    _, index = torch.max(output, 1)\n",
+    "    \n",
+    "    return class_names[index]"
    ]
   },
   {
@@ -1097,7 +1106,22 @@
     "### Feel free to use as many code cells as needed.\n",
     "\n",
     "def run_app(img_path):\n",
-    "    ## handle cases for a human face, dog, and neither\n",
+    "    if face_detector(img_path):\n",
+    "        #Human face detected\n",
+    "        human = predict_breed_transfer(img_path)\n",
+    "        img = Image.open(img_path)\n",
+    "        plt.imshow(img)\n",
+    "        plt.show()\n",
+    "        return print('Found human. You look like a {}'.format(human))\n",
+    "    elif dog_detector(img_path):\n",
+    "        #Dog detected\n",
+    "        dog_breed = predict_breed_transfer(img_path)\n",
+    "        img = Image.open(img_path)\n",
+    "        plt.imshow(img)\n",
+    "        plt.show()\n",
+    "        return print('Found dog. Your breed is a {}'.format(dog_breed))\n",
+    "    else:\n",
+    "        print('No human or dog detected.')\n",
     "    \n"
    ]
   },
@@ -1160,7 +1184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
