Refactor: Loss function

--- a/project-face-generation/dlnd_face_generation.ipynb
+++ b/project-face-generation/dlnd_face_generation.ipynb
@@ -675,6 +675,7 @@
     "    '''Calculates how close discriminator outputs are to being real.\n",
     "       param, D_out: discriminator logits\n",
     "       return: real loss'''\n",
+    "    '''\n",
     "    batch_size = D_out.size(0)\n",
     "    \n",
     "    labels = torch.ones(batch_size) # real labels = 1\n",
@@ -684,12 +685,15 @@
     "    \n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
     "    loss = criterion(D_out.squeeze(), labels)\n",
+    "    '''\n",
+    "    loss = torch.mean((D_out-1)**2)\n",
     "    return loss\n",
     "\n",
     "def fake_loss(D_out):\n",
     "    '''Calculates how close discriminator outputs are to being fake.\n",
     "       param, D_out: discriminator logits\n",
     "       return: fake loss'''\n",
+    "    '''\n",
     "    batch_size = D_out.size(0)\n",
     "    \n",
     "    labels = torch.zeros(batch_size) # fake labels = 0\n",
@@ -699,6 +703,8 @@
     "        \n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
     "    loss = criterion(D_out.squeeze(), labels)\n",
+    "    '''\n",
+    "    loss = torch.mean(D_out**2)\n",
     "    return loss"
    ]
   },
