Refactor: Improved test loss accuracy

--- a/convolutional-neural-networks/cifar-cnn/cifar10_cnn_augmentation.ipynb
+++ b/convolutional-neural-networks/cifar-cnn/cifar10_cnn_augmentation.ipynb
@@ -593,7 +593,7 @@
     "\n",
     "print('\\nTest Accuracy (Overall): %2d%% (%2d/%2d)' % (\n",
     "    100. * np.sum(class_correct) / np.sum(class_total),\n",
-    "    np.sum(class_correct), np.sum(class_total)))"
+    "    np.sum(class_correct), np.sum(class_total)))\n"
    ]
   },
   {
